# srvp-fd

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  test_package.py
.github/workflows/: python-package.yml
mmnist_fd/: __init__.py  frechet_distance.py
pretrained_models/: config.json
srvp_fd/: frechet_distance.py  srvp_model.py
srvp_mmnist_fd/: frechet_distance.py
tests/: test_batch_processing.py  test_frechet_distance.py  test_negative_eigenvalue_handling.py  test_package.py
