[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srvp-mmnist-fd"
version = "0.1.0"
description = "Fréchet distance calculator for Moving MNIST images using SRVP encoder"
readme = "README.md"
authors = [
    {name = "Naoki Kiyohara", email = "n.kiyohara23@imperial.ac.uk"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "torch>=1.7.0",
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "huggingface_hub>=0.16.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
"Homepage" = "https://github.com/nkiyohara/srvp-mmnist-fd"
"Bug Tracker" = "https://github.com/nkiyohara/srvp-mmnist-fd/issues"
"Documentation" = "https://github.com/nkiyohara/srvp-mmnist-fd#readme"
"Source Code" = "https://github.com/nkiyohara/srvp-mmnist-fd"

[tool.setuptools]
packages = ["srvp_mmnist_fd"]
include-package-data = true

[tool.setuptools.package-data]
srvp_mmnist_fd = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "D", "PT", "RET", "SIM", "ARG"]
ignore = ["D203", "D213"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["srvp_mmnist_fd"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
